[workspace]
members = [
    "wk01",
    "wk02",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Jenul Ferdinand"]

[workspace.dependencies]
# Common dependencies that multiple crates might use
# Add dependencies here as needed, e.g.:
# serde = { version = "1.0", features = ["derive"] }
# rand = "0.8"
